# hpx-dashboard

./: .gitignore  .pre-commit-config.yaml  LICENSE  MANIFEST.in  README.md  README.rst  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py
agent/: __main__.py  hpx_parser.py  logger.py  tcpclient.py
docs/: Makefile  conf.py  dashboard.rst  index.rst  jupyter.rst  quickstart.rst
docs/_source/: hpx_dashboard.agent.rst  hpx_dashboard.common.rst  hpx_dashboard.rst  hpx_dashboard.server.data.rst  hpx_dashboard.server.http.rst  hpx_dashboard.server.plots.rst  hpx_dashboard.server.rst  hpx_dashboard.server.widgets.rst  modules.rst
hpx_dashboard/server/: tcplistener.py
pip-wheel-metadata/hpx_dashboard.dist-info/: METADATA
server/: __main__.py  logger.py  singleton.py  tcp_listener.py  tcplistener.py
src/hpx_dashboard/: __main__.py
src/hpx_dashboard.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/hpx_dashboard/agent/: __main__.py  cli.py  hpx_parser.py  tcp_client.py
src/hpx_dashboard/common/: constants.py  logger.py  singleton.py
src/hpx_dashboard/server/: __init__.py  __main__.py  app.py  cli.py  components.py  data_aggregator.py  data_collection.py  notebook.py  tcp_listener.py  utils.py  worker.py
src/hpx_dashboard/server/data/: __init__.py  aggregator.py  collection.py  sources.py
src/hpx_dashboard/server/plots/: __init__.py  base.py  base_plot.py  generator.py  plot_generator.py  raster.py  tasks.py  threads.py
src/hpx_dashboard/server/widgets/: __init__.py  base.py  select.py  widgets.py
tools/: generate_counternames.py
(+3 files in other folders)
