# This file is used to configure your project.
# Read more about the various options under:
# http://setuptools.readthedocs.io/en/latest/setuptools.html#configuring-setup-using-setup-cfg-files

[metadata]
name = hpx-dashboard
author = ETH Zurich
description = Python dashboard for the diagnostic of the performance of HPX applications 
license = BSD-3
license_files = LICENSE
long-description = file: README.md
long-description-content-type = text/x-rst; charset=UTF-8
project_urls =
    Source Code = https://github.com/jokteur/hpx-dashboard

platforms = Linux
classifiers =
    Development Status :: 3 - Alpha
    License :: OSI Approved :: BSD-3 License
version = 0.0.1

[options]
packages = find:
package_dir =
    =src
include_package_data = True
python_requires = >= 3.6
install_requires =
    black>=19.3b0
    numpy~=1.15
    bokeh>=1.3.4

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    hpx-dashboard-server = hpx_dashboard.server.cli:main
    hpx-dashboard-agent = hpx_dashboard.agent.cli:main

[tool:pytest]
# Options for py.test:
# Specify command line options as you would do when invoking py.test directly.
norecursedirs =
    dist
    build
    .tox
testpaths = tests

[build_sphinx]
source_dir = docs
build_dir = build/sphinx
warning-is-error = True

[flake8]
# Some sane defaults for the code style checker flake8
max-line-length = 100
exclude =
    .tox
    build
    dist
    .eggs